SQuirreL SQL Client Change Log
==============================

${squirrelsql.changelog.header}


Not yet released, available in our GIT repository and in future snapshots and releases.
===============================================================================================

Hibernate Plugin: HQL queries that returned results with enum types used to lead to unmarshall exceptions.


3.5.2 (03/15/2014)
==================

Note: Automatic updates were disabled. Please use our home page to download latest versions and snapshots.

Enhancements:

- SQLFilter tab can support custom operators and functions depending on column type
- Improved loading of content tab for tables with big data
- Added support for postgres UUID-s
- Added support for postgres arrays
- Added support for postgis Geometry (requires postgis.jar added to driver classpath).
  Geometries are presented and edited as WKT. WKT is more human readable and allows quick editing.
  Content tab displays summary (containing only: type, center point, and total number of vertexes)
  that is lazy loaded and substituted, with full content, when given cell is clicked.
Thanks to Jaroslaw Jarmolowicz for the patches


Allowed command line arguments to be defined by Plugins. See Method IPlugin.getPluginApplicationArguments().
Thanks to David Green for the patch


Bug fixes:

#1130 Unable to save SQLReadOn properties




3.5.1 (02/01/2014)
==================

Enhancements:

File export: Replaced the old xls export by the newer xlsx export which allows far mor rows to export.
   Thanks to André Schild for the patch.
   This also fixes bug #625

#1108 (in bugs): New entry in table's right mouse menu: Copy column names

Upgraded to the latest RSyntax version (2.5.0 / 3).

Added MongoDB driver to default driver list.


New Plugin: Vertica DB Plugin
  New Plugin for the Vertica DB. Thanks to Vertica team.


Added Vertica driver to default driver list.
