@@ -16,3 +16,5 @@ SQLFilterAction.singleObjectMessage=You must have a single table or view selecte
 
 RenameSessionAction.title=Session/Tab Rename
 RenameSessionAction.label=Enter new session/tab label:
+
+editextras.errorProcessingFormat=Error processing Format SQL command: {0}
